--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.472.0",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
