--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "@types/react-dom": "^18",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
+    "eslint-config-prettier": "^10.0.1",
     "postcss": "^8",
+    "prettier": "3.4.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
