--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 DATABASE_URL="postgresql://steer_user:ksWmhWR5JD+@localhost:5432/steer-linx?schema=public"
+ADFS_ISSUER=""
+ADFS_CLIENT_ID=""
+ADFS_CLIENT_SECRET=""
+NEXTAUTH_SECRET="rl8r56uPjPIOLAkeXXY47J02dVxkO3w6bIcaIa5TMQs="
+JWT_SECRET="5DtIdfS8W2roYTxF3K+eLaflQqzaeQoECQwHKPuV7Kc="
