fix: .env database

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:toor@localhost:5432/steerlinx-db?schema=public"
+DATABASE_URL="postgresql://steer_user:ksWmhWR5JD+@localhost:5432/steer-linx?schema=public"
 ADFS_ISSUER=""
 ADFS_CLIENT_ID=""
 ADFS_CLIENT_SECRET=""
