--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
     "db:generate": "npx prisma generate"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "6.1.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.1.7",
+    "@stepperize/react": "^5.0.0",
     "@tanstack/react-query": "^5.62.15",
     "@tanstack/react-table": "^8.20.6",
     "axios": "^1.7.9",
@@ -38,6 +42,7 @@
     "next-auth": "^4.24.11",
     "prisma": "^6.1.0",
     "react": "^18",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.6.0",
