--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "db:generate": "npx prisma generate"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.30.8",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/list": "^2.0.4",
+    "@editorjs/paragraph": "^2.11.7",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "6.1.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
@@ -36,6 +39,8 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "editorjs-html": "^4.0.5",
+    "editorjs-mention-tool": "^1.0.2",
     "jose": "^5.9.6",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.472.0",
@@ -46,12 +51,16 @@
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5",
     "vaul": "^1.1.2",
     "zod": "^3.24.1",
     "zod-i18n-map": "^2.27.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@editorjs/attaches": "^1.3.0",
+    "@editorjs/link": "^2.6.2",
+    "@editorjs/simple-image": "^1.6.0",
     "@eslint/eslintrc": "^3",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^20",
