--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@stepperize/react": "^5.0.0",
     "@tanstack/react-query": "^5.62.15",
     "@tanstack/react-table": "^8.20.6",
+    "apexcharts": "^4.4.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -42,6 +43,7 @@
     "lucide-react": "^0.472.0",
     "next": "15.1.3",
     "react": "^18",
+    "react-apexcharts": "^1.7.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
