--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "eslint-config-prettier": "^10.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "msw": "^2.7.1",
     "postcss": "^8",
     "prettier": "3.4.2",
     "react-test-renderer": "^19.0.0",
