--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "msw": "^2.7.1",
     "postcss": "^8",
-    "prettier": "3.4.2",
+    "prettier": "^3.5.3",
     "react-test-renderer": "^19.0.0",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
