--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@stepperize/react": "^5.0.0",
     "@tanstack/react-query": "^5.62.15",
     "@tanstack/react-table": "^8.20.6",
+    "@testing-library/user-event": "^14.6.1",
     "apexcharts": "^4.5.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
